Updated hero section layout and re designed ceontact compponent

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,7 +1,7 @@
-<div class="h-[500px] grid grid-cols-12">
+<div class="h-[500px] grid grid-cols-12 bg-[#FF6D1F] rounded-3xl">
   <div class="col-start-4 col-end-6">
     <svg
-      class="hidden lg:block md:w-[230px] md:h-[230px]"
+      class="hidden lg:block md:w-[230px] md:h-[230px] mt-10"
       xmlns="http://www.w3.org/2000/svg"
       viewBox="0 -960 960 960"
       fill="#000000"
@@ -9,8 +9,10 @@
       ></path></svg
     >
   </div>
-  <div class="col-start-7 col-end-12 text-end">
-    <h3 class="text-4xl lg:text-6xl">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
+  <div class="col-start-7 col-end-12 text-end mt-10">
+    <h3 class="text-4xl lg:text-6xl font-bold">
+      CREIAMO INSIEME QUALCOSA DI UNICO
+    </h3>
   </div>
   <div
     class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col text-sm md:text-xl"
