--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,93 @@
 <div class="h-svh grid grid-cols-12">
   <div
-    class="col-span-12 font-bold flex items-end text-7xl md:text-8xl lg:text-9xl ml-5"
+    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-7xl md:text-8xl lg:text-9xl mt-32"
   >
-    <h2>SONO UN WEB DESIGNER FREELANCE</h2>
+    <h1>
+      SONO UN<br />WEB <span class="relative col-span-12"
+        ><svg
+          id="Group50"
+          class="absolute right-0 -inset-4"
+          width="15621"
+          height="3569"
+          viewBox="0 0 15621 3569"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+          style="max-width: 110%; max-height: 120%;"
+        >
+          <path
+            d="M11673.5 106.131C9838.49 224.049 11204.5 121.325 8490.68 285.107C7766.59 328.805 6793.05 417.664 5963.06 523.023C4721.68 680.604 3577.12 823.746 2121.52 1205.04C1652.17 1327.99 535.584 1631.09 236.781 2025.56C-222.29 2835.33 2863.99 3037.48 3871.81 3077.36C4645.72 3107.98 4787.6 3133.76 6735.57 3070.65C9117.73 2993.48 10119.1 2831.93 11234.4 2674.28C12349.7 2516.63 13538.2 2228.28 14528.4 1891.65C15021.1 1724.13 15394.3 1475.18 15440.8 1271.19C15564.6 728.576 13905.1 484.169 13130.3 408.188C11816.8 279.396 9084.55 206.387 8486.69 161.967"
+            stroke="#FF6D1F"
+            stroke-width="80"
+            stroke-linecap="round"
+            stroke-dasharray="0,0,0,34989.8671875"
+            ><animate
+              attributeType="XML"
+              attributeName="stroke-dasharray"
+              repeatCount="1"
+              dur="4.545454545454546s"
+              values="0,0,0,34989.8671875; 
+                    0,17494.93359375,17494.93359375,0; 
+                    34989.8671875,0,0,0"
+              keyTimes="0; 0.5; 1"
+              fill="freeze"></animate></path
+          >
+          <path
+            d="M11810.5 108.433C11812.4 168.968 11645.1 211.323 11447.1 217.737C11281.2 198.73 11576.8 176.601 11574.9 116.066C11572.9 55.5316 11243.6 53.6486 11441.6 47.2348C11639.6 40.821 11808.5 47.8981 11810.5 108.433Z"
+            fill="white"
+            stroke-dasharray="0,0,0,1327.1461181640625"
+            ><animate
+              attributeType="XML"
+              attributeName="stroke-dasharray"
+              repeatCount="1"
+              dur="4.545454545454546s"
+              values="0,0,0,1327.1461181640625; 
+                    0,663.5730590820312,663.5730590820312,0; 
+                    1327.1461181640625,0,0,0"
+              keyTimes="0; 0.5; 1"
+              fill="freeze"></animate></path
+          >
+        </svg>DESIGNER</span
+      >
+      <br />FREELANCE<br />DI MILANO
+    </h1>
+
+    <div class="flex gap-5 text-sm">
+      <button class="border-2 border-[#333333] py-2 px-3 rounded-3xl">
+        <div class="flex justify-center items-center gap-2">
+          Scarica CV
+          <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="16px"
+              viewBox="0 -960 960 960"
+              width="16px"
+              fill="#ffffff"
+              ><path
+                d="M440-800v487L216-537l-56 57 320 320 320-320-56-57-224 224v-487h-80Z"
+              ></path></svg
+            >
+          </div>
+        </div>
+      </button>
+      <div>
+        <button
+          class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl"
+        >
+          <div class="flex justify-center items-center gap-2">
+            Contattami
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20px"
+              viewBox="0 -960 960 960"
+              width="20px"
+              fill="#ffffff"
+              ><path
+                d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"
+              ></path></svg
+            >
+          </div>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
