--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -8,8 +8,8 @@
         id="menu-toggle"
         class="flex flex-col gap-3 justify-center items-end cursor-pointer h-16 w-16"
       >
-        <span class="bg-black h-1 w-12"></span>
-        <span class="bg-black h-1 w-12"></span>
+        <span class="bg-[#333333] h-1 w-12"></span>
+        <span class="bg-[#333333] h-1 w-12"></span>
       </div>
     </div>
   </nav>
