Updated project section

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <div class="h-svh grid grid-cols-12">
   <div
-    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-7xl md:text-8xl lg:text-9xl mt-32"
+    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-9xl mt-32"
   >
     <h1>
       SONO UN<br />WEB <span class="relative col-span-12"
