--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Footer from "../components/Footer.astro";
 >
   Progetti
 </h3>
-<section>
+<section class="h-svh">
   <Project
     id="project-1"
     image="moda.jpg"
