--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -3,16 +3,14 @@ const { title, description, image, id } = Astro.props;
 const bgStyle = `background-image: url('${image}')`;
 ---
 
-<div class="h-3/6 grid-cols-12 grid-rows-4">
-  <div
-    id={id}
-    class="col-span-12 rows-span-2 flex items-center justify-center bg-cover bg-center bg-no-repeat transform transition-all duration-1000 hover:scale-110"
-    style={bgStyle}
-  >
-    <div class="text-center text-white">
-      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
-      <p>{description}</p>
-    </div>
+<div
+  id={id}
+  class="h-[600px] col-span-12 lg:col-span-6 lg:row-span-2 flex items-center justify-center bg-cover bg-center bg-no-repeat rounded-xl transition duration-700 hover:brightness-75 cursor-pointer"
+  style={bgStyle}
+>
+  <div class="text-center text-white">
+    <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
+    <p>{description}</p>
   </div>
 </div>
 <!-- <div class="overflow-hidden cursor-pointer">
