Uptated some components layout

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,21 +1,21 @@
-<div class="h-[700px] grid grid-cols-12 bg-[#FF6D1F] rounded-3xl">
-  <div class="col-start-4 col-end-6">
+<div class="h-[700px] grid grid-cols-12 grid-rows-2 bg-[#FF6D1F] rounded-3xl">
+  <div class="col-start-2 col-end-6 flex justify-end items-center mt-10">
     <svg
-      class="hidden lg:block md:w-[230px] md:h-[230px] mt-10"
+      class="max-w-[280px]"
       xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 -960 960 960"
+      viewBox="0 -999 960 800"
       fill="#000000"
       ><path d="M360-200v-80h264L160-744l56-56 464 464v-264h80v400H360Z"
       ></path></svg
     >
   </div>
-  <div class="col-start-7 col-end-12 text-end mt-10">
-    <h3 class="text-4xl lg:text-6xl font-bold">
-      CREIAMO INSIEME QUALCOSA DI UNICO
-    </h3>
+  <div
+    class="col-start-7 col-end-12 flex justify-center items-center text-end mt-10"
+  >
+    <h3 class="text-6xl font-bold">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
   <div
-    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col text-sm md:text-xl"
+    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col justify-center text-sm md:text-xl"
   >
     TELEFONO
     <a
