--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,13 +5,12 @@
       <ul
         class="flex flex-row items-center gap-5 justify-center text-xs md:text-sm"
       >
-        <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
+        <a href="#about" class="hover:underline cursor-pointer">About me</a>
         <a href="/curriculum" class="hover:underline cursor-pointer"
-          >CURRICULUM</a
+          >Curriculum</a
         >
-        <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
-        <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a>
-        <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a>
+        <a href="#progetti" class="hover:underline cursor-pointer">Progetti</a>
+        <a href="#contatti" class="hover:underline cursor-pointer">Contatti</a>
       </ul>
     </div>
   </div>
