--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,6 +1,6 @@
 <div class="h-svh grid grid-cols-12">
   <div
-    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-9xl mt-32"
+    class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-9xl mt-24"
   >
     <h1>
       SONO UN<br />WEB <span class="relative col-span-12"
@@ -51,7 +51,7 @@
       <br />FREELANCE<br />DI MILANO
     </h1>
 
-    <div class="flex gap-5 text-sm">
+    <div class="flex gap-5 text-2xl">
       <button class="border-2 border-[#333333] py-2 px-3 rounded-3xl">
         <div class="flex justify-center items-center gap-2">
           Scarica CV
