--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 <header>
-  <nav class="grid grid-cols-12 h-14 w-full my-12 fixed z-10">
+  <nav class="grid grid-cols-12 h-14 w-full my-10 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
       <div id="logo" class="text-xl md:text-2xl">
         <a href="/">logo</a>
@@ -18,7 +18,7 @@
     id="menu"
     class="fixed h-screen w-screen top-0 left-0 z-10 grid grid-cols-12 bg-gradient-to-r from-gray-950 text-white opacity-0 pointer-events-none transform -translate-y-full transition-all duration-500 ease-in-out"
   >
-    <div class="col-start-2 col-end-12 flex flex-col my-14">
+    <div class="col-start-2 col-end-12 flex flex-col my-10">
       <div
         class="hamburger relative flex flex-col gap-3 justify-center items-end h-14 mb-12"
       >
@@ -33,23 +33,20 @@
       </div>
 
       <ul class="text-7xl justify-end text-right py-5">
-        <li>
-          <a href="#about" class="hover:underline cursor-pointer">ABOUT ME</a>
-        </li>
-        <li>
+        <li class="pb-3">
           <a href="/curriculum" class="hover:underline cursor-pointer"
-            >CURRICULUM</a
+            >Curriculum</a
           >
         </li>
-        <li>
-          <a href="#servizi" class="hover:underline cursor-pointer">SERVIZI</a>
+        <li class="pb-3">
+          <a href="#about" class="hover:underline cursor-pointer">About me</a>
         </li>
-        <li>
-          <a href="#progetti" class="hover:underline cursor-pointer">PROGETTI</a
+        <li class="pb-3">
+          <a href="#progetti" class="hover:underline cursor-pointer">Progetti</a
           >
         </li>
-        <li>
-          <a href="#contatti" class="hover:underline cursor-pointer">CONTATTI</a
+        <li class="pb-3">
+          <a href="#contatti" class="hover:underline cursor-pointer">Contatti</a
           >
         </li>
       </ul>
