--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,4 +1,4 @@
-<div class="h-svh grid grid-cols-12">
+<div id="hero" class="h-svh grid grid-cols-12">
   <div
     class="col-span-12 font-bold text-center text-[#333333] flex flex-col items-center justify-center gap-5 text-9xl mt-24"
   >
