--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,6 +34,9 @@
 
       <ul class="text-7xl justify-end text-right py-5">
         <li class="pb-3">
+          <a href="#hero" class="hover:underline cursor-pointer">Home</a>
+        </li>
+        <li class="pb-3">
           <a href="/curriculum" class="hover:underline cursor-pointer"
             >Curriculum</a
           >
