--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,24 +14,12 @@ import Footer from "../components/Footer.astro";
 <Navbar />
 <Hero />
 <h3
-  id="servizi"
+  id="about"
   class="text-7xl md:text-8xl font-bold text-[#333333] ml-5 mt-72 mb-20"
 >
   About me
 </h3>
 <About />
-<!-- <h3
-  id="servizi"
-  class="text-7xl md:text-8xl font-bold text-[#333333] ml-5 mt-72 mb-20"
->
-  Servizi
-</h3>
-<section>
-  <Service id="service-1" image="web-design.jpg" title="WEB DESIGN" />
-  <Service2 id="service-2" image="branding.jpg" title="BRANDING" />
-  <Service id="service-3" image="landing-page.jpg" title="LANDING PAGE" />
-</section> -->
-
 <h3
   id="progetti"
   class="text-7xl md:text-8xl font-bold text-[#333333] ml-5 mt-36 mb-20"
