--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -15,7 +15,7 @@
     <h3 class="text-6xl font-bold">CREIAMO INSIEME QUALCOSA DI UNICO</h3>
   </div>
   <div
-    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col justify-center text-sm md:text-xl"
+    class="col-start-2 col-end-12 md:col-start-6 dm:col-end-12 flex flex-col justify-center text-xl"
   >
     TELEFONO
     <a
