--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,14 +30,14 @@ import Footer from "../components/Footer.astro";
   <Project
     id="project-1"
     image="beauty.jpg"
-    title="PROGETTO 1"
-    description="Descrizione del primo progetto"
+    title="Portfolio"
+    description="Astro, HTML5, CSS3, Javascript, Tailwind"
   />
   <Project2
     id="project-2"
-    image="arredo.jpg"
-    title="PROGETTO 2"
-    description="Descrizione del secondo progetto"
+    image="progetto-2.png"
+    title="Landing page"
+    description="HTML5, CSS3, GSAP, Javascript, PHP, MySQL"
   />
   <Project2
     id="project-3"
