--- a/src/components/Project2.astro
+++ b/src/components/Project2.astro
@@ -5,11 +5,21 @@ const bgStyle = `background-image: url('${image}')`;
 
 <div
   id={id}
-  class="col-span-12 lg:col-span-6 flex items-center justify-center bg-cover bg-center bg-no-repeat rounded-xl transition duration-700 hover:brightness-75 cursor-pointer"
+  class="col-span-12 lg:col-span-6 flex items-center justify-center relative group bg-cover bg-center bg-no-repeat rounded-xl cursor-pointer"
   style={bgStyle}
 >
-  <div class="text-center text-white">
-    <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
+  <div
+    class="absolute inset-0 bg-black/50 transition duration-700 group-hover:bg-black/20 rounded-xl"
+  >
+  </div>
+  <div class="text-center text-white absolute flex flex-col gap-5">
+    <a
+      href="https://studio-yoga-landingpage.netlify.app/"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
+    </a>
     <p>{description}</p>
   </div>
 </div>
