--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,1 +1,31 @@
-<section id="about" class="h-svh grid grid-cols-12"></section>
+<section id="about" class="h-[200svh] grid grid-cols-12 grid-rows-2">
+  <div class="col-span-6 text-5xl m-5">
+    <p class="mb-16">
+      Ciao &#x1F44B;&#x1F3FC;<br />
+      piacere Simone!
+    </p>
+    <p class="mb-8">
+      Da circa due anni mi occupo di realizzare <span class="text-[#FF6D1F]"
+        >siti web</span
+      > e <span class="text-[#FF6D1F]">landing page</span>.
+    </p>
+    <p class="mb-8">
+      Sfrutto la potenza del web per aiutare piccole aziende locali e freelance
+      ad ottenere maggiore <span class="text-[#FF6D1F]">visibilità</span>.
+    </p>
+  </div>
+  <div
+    class="col-start-6 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end m-5"
+  >
+    <p class="mb-8">
+      Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
+      lavoro da dipendente per dedicarmi totalmente allo <span
+        class="text-[#FF6D1F]">sviluppo web</span
+      > e crescere in questo settore.
+    </p>
+    <p>
+      Sono sempre in cerca di nuovi progetti e realtà con cui collaborare,
+      quindi non esitare a contattarmi!
+    </p>
+  </div>
+</section>
