Removed about section margin

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -15,7 +15,7 @@
     </p>
   </div>
   <div
-    class="col-start-6 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end m-5"
+    class="col-start-6 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end"
   >
     <p class="mb-8">
       Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
