--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
-<section id="about" class="h-[200svh] grid grid-cols-12 grid-rows-2">
-  <div class="col-span-6 text-5xl m-5">
+<section id="about" class="h-100vsh grid grid-cols-12 grid-rows-2">
+  <div class="col-start-1 col-end-12 text-5xl m-5">
     <p class="mb-16">
       Ciao &#x1F44B;&#x1F3FC;<br />
       piacere Simone!
@@ -15,9 +15,9 @@
     </p>
   </div>
   <div
-    class="col-start-6 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end"
+    class="col-start-2 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end"
   >
-    <p class="mb-8">
+    <p class="mb-24">
       Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
       lavoro da dipendente per dedicarmi totalmente allo <span
         class="text-[#FF6D1F]">sviluppo web</span
