--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -2,8 +2,7 @@
   <!--   <div
     class="text-6xl flex justify-end md:text-7xl lg:text-8xl transform -rotate-90"
   > -->
-  <h1 class="row-start-9 text-8xl transform -rotate-90">CURRICULUM</h1>
-  <a href="/" class="col-start-3 row-start-2 flex items-end">
+  <a href="/" class="col-start-2 row-start-1 flex items-end">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       height="40px"
@@ -13,7 +12,7 @@
       ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"></path></svg
     >
   </a>
-  <div class="col-start-6 col-end-13 text-end mt-10 mr-5">
+  <div class="col-start-3 col-end-7">
     <h2 class="text-5xl md:text-9xl">Simone Garofalo</h2>
     <p class="overflow-hidden">
       Ciao &#x1F44B;&#x1F3FC; sono un <span class="text dinamic-text-content"
@@ -21,29 +20,36 @@
       >
     </p>
   </div>
-  <div class="col-start-3 col-end-12 row-start-5">
-    <div>
-      <h3 class="text-3xl">SKILLS</h3>
-      <p class="text-xs md:text-sm pb-3">
-        HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP,
-        WORDPRESS, FIGMA, UX/UI
-      </p>
+  <!-- <div class="col-start-6 col-end-13 text-end mt-10 mr-5">
+    <div
+      class="flex justify-start col-start-2 row-start-5 text-8xl transform -rotate-90 ml-5"
+    >
+      <h1>Curriculum</h1>
     </div>
-    <div class="flex flex-col">
-      <h3 class="text-3xl">FORMAZIONE</h3>
-      <h4>&#10045; CORSO WEB DESIGNER</h4>
-      <p class="text-xs pb-3">
-        Nuova Accademia delle Belle Arti di Milano (NABA)
-      </p>
-      <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
-      <p class="text-xs pb-3">Udemy</p>
-      <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
-      <p class="text-xs pb-3">IIS Luigi Einaudi</p>
+    <div class="col-start-3 col-end-12 row-start-5">
+      <div>
+        <h3 class="text-3xl">SKILLS</h3>
+        <p class="text-xs md:text-sm pb-3">
+          HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP,
+          WORDPRESS, FIGMA, UX/UI
+        </p>
+      </div>
       <div class="flex flex-col">
-        <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
-        <h4>&#10045; WEB DESIGNER FREELANCE</h4>
-        <p class="text-xs">Milano</p>
+        <h3 class="text-3xl">FORMAZIONE</h3>
+        <h4>&#10045; CORSO WEB DESIGNER</h4>
+        <p class="text-xs pb-3">
+          Nuova Accademia delle Belle Arti di Milano (NABA)
+        </p>
+        <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
+        <p class="text-xs pb-3">Udemy</p>
+        <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
+        <p class="text-xs pb-3">IIS Luigi Einaudi</p>
+        <div class="flex flex-col">
+          <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
+          <h4>&#10045; WEB DESIGNER FREELANCE</h4>
+          <p class="text-xs">Milano</p>
+        </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
