--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -16,7 +16,7 @@
 
   <div
     id="menu"
-    class="fixed h-screen w-screen top-0 left-0 z-10 grid grid-cols-12 bg-gradient-to-r from-gray-950 text-white opacity-0 pointer-events-none transform -translate-y-full transition-all duration-500 ease-in-out"
+    class="fixed h-screen w-screen top-0 left-0 z-10 grid grid-cols-12 bg-gradient-to-l from-gray-950 text-white opacity-0 pointer-events-none transform -translate-y-full transition-all duration-500 ease-in-out"
   >
     <div class="col-start-2 col-end-12 flex flex-col my-10">
       <div
