--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -14,7 +14,7 @@ const bgStyle = `background-image: url('${image}')`;
   </div>
   <div class="text-center text-white absolute flex flex-col gap-5">
     <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
-    <p>{description}</p>
+    <p class="text-2xl">{description}</p>
   </div>
 </div>
 <!-- <div class="overflow-hidden cursor-pointer">
