--- a/src/components/Project2.astro
+++ b/src/components/Project2.astro
@@ -20,6 +20,6 @@ const bgStyle = `background-image: url('${image}')`;
     >
       <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
     </a>
-    <p>{description}</p>
+    <p class="text-2xl">{description}</p>
   </div>
 </div>
