Updated curriculum page and button's hover effect

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -1,55 +1,152 @@
-<div class="h-lvh grid grid-cols-12 grid-rows-10">
-  <!--   <div
-    class="text-6xl flex justify-end md:text-7xl lg:text-8xl transform -rotate-90"
-  > -->
-  <a href="/" class="col-start-2 row-start-1 flex items-end">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      height="40px"
-      viewBox="0 -960 960 960"
-      width="40px"
-      fill="000000"
-      ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"></path></svg
-    >
-  </a>
-  <div class="col-start-3 col-end-7">
-    <h2 class="text-5xl md:text-9xl">Simone Garofalo</h2>
-    <p class="overflow-hidden">
-      Ciao &#x1F44B;&#x1F3FC; sono un <span class="text dinamic-text-content"
+<div class="h-14 grid grid-cols-12 my-5">
+  <div class="col-start-2 col-end-12">
+    <div class="col-start-2 col-end-4 flex justify-start">
+      <a href="/">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="40px"
+          viewBox="0 -960 960 960"
+          width="40px"
+          fill="000000"
+          ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"
+          ></path></svg
+        >
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="h-[200px] grid grid-cols-12 text-8xl">
+  <div class="col-start-2 col-end-12 mt-5">
+    <h1 class="font-bold">Curriculum</h1>
+    <p class="overflow-hidden text-3xl">
+      Sono un <span class="text dinamic-text-content"
         >Web designer & Front-end developer</span
       >
     </p>
   </div>
-  <!-- <div class="col-start-6 col-end-13 text-end mt-10 mr-5">
-    <div
-      class="flex justify-start col-start-2 row-start-5 text-8xl transform -rotate-90 ml-5"
-    >
-      <h1>Curriculum</h1>
-    </div>
-    <div class="col-start-3 col-end-12 row-start-5">
+</div>
+
+<div class="h-[50vsh] grid grid-cols-12">
+  <div class="col-start-2 col-end-6 mt-5 mb-52">
+    <h3 class="font-bold text-5xl mb-6">Skills</h3>
+    <div class="h-32 w-[450px] flex flex-wrap gap-x-5 gap-y-8 mb-16">
       <div>
-        <h3 class="text-3xl">SKILLS</h3>
-        <p class="text-xs md:text-sm pb-3">
-          HTML5, CSS3, JAVASCRIPT, PHP, MYSQL, ASTRO JS, TAILWIND, GSAP,
-          WORDPRESS, FIGMA, UX/UI
-        </p>
+        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">HTML</span>
       </div>
-      <div class="flex flex-col">
-        <h3 class="text-3xl">FORMAZIONE</h3>
-        <h4>&#10045; CORSO WEB DESIGNER</h4>
-        <p class="text-xs pb-3">
-          Nuova Accademia delle Belle Arti di Milano (NABA)
-        </p>
-        <h4>&#10045; WEB DEVELOPMENT BOOTCAMP</h4>
-        <p class="text-xs pb-3">Udemy</p>
-        <h4>&#10045; DIPLOMA IN AMMINISTRAZIONE, FINANZA E MARKETING</h4>
-        <p class="text-xs pb-3">IIS Luigi Einaudi</p>
-        <div class="flex flex-col">
-          <h3 class="text-3xl">ESPERIENZE LAVORATIVE</h3>
-          <h4>&#10045; WEB DESIGNER FREELANCE</h4>
-          <p class="text-xs">Milano</p>
-        </div>
+      <div>
+        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">CSS</span>
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full"
+          >JavaScript</span
+        >
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full">PHP</span>
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full">MySQL</span>
+      </div>
+      <div>
+        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">Astro</span
+        ><br />
+      </div>
+      <div>
+        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full"
+          >Tailwind</span
+        >
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full">GSAP</span>
+      </div>
+      <div>
+        <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full"
+          >Wordpress</span
+        >
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full">Figma</span>
+      </div>
+      <div>
+        <span class="py-2 px-4 border-2 border-black rounded-full">UX/UI</span>
       </div>
     </div>
-  </div> -->
+
+    <div class="flex flex-col">
+      <h3 class="font-bold text-5xl mb-2">Formazione</h3>
+      <h4>Corso Web Design & Font-end development</h4>
+      <p class="text-xs mb-3 italic">
+        Nuova Accademia delle Belle Arti di Milano (NABA)
+      </p>
+      <h4>Web development bootcamp</h4>
+      <p class="text-xs mb-3 italic">Udemy</p>
+      <h4>Diploma in Amministrazione, finanza e marketing</h4>
+      <p class="text-xs mb-12 italic">IIS Luigi Einaudi</p>
+      <div class="flex flex-col">
+        <h3 class="font-bold text-5xl mb-2">Esperienze lavorative</h3>
+        <h4>Web designer freelance</h4>
+        <p class="text-xs mb-3 italic">Milano</p>
+        <h4>Customer Service Specialist</h4>
+        <p class="text-xs italic">PMC Plus Srl</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="col-start-8 col-end-12 my-5">
+    <h3 class="font-bold text-5xl mb-2">Ultimo progetto</h3>
+    <h4 class="font-bold text-xl mb-4">Portfolio personale</h4>
+    <p class="mb-8">
+      La realizzazione di questo portfolio mi ha permesso di mettere alla prova
+      e consolidare molte delle competenze tecniche e grafiche che ho acquisito
+      in questi ultimi due anni di lavoro.
+    </p>
+    <h6 class="font-bold mb-2">Stack utilizzato:</h6>
+    <ul>
+      <li class="mb-8">
+        <span class="text-[#FF6D1F] font-bold">Astro</span> come framework front-end
+        per realizzare un progetto sfruttando i superset di HTML nei componenti e
+        la logica dell'architettura a isole.
+      </li>
+      <li class="mb-8">
+        <span class="text-[#FF6D1F] font-bold">HTML</span> e <span
+          class="text-[#FF6D1F] font-bold">CSS</span
+        > (con Grid e Flexbox) per creare un design moderno e intuitivo e ottimizzare
+        la flessibilità del layout.
+      </li>
+      <li class="mb-8">
+        <span class="text-[#FF6D1F] font-bold">JavaScript</span> per animare il menù,
+        creare testi reattivi e implementare uno scrolling dinamico della navbar.
+      </li>
+      <li>
+        <span class="text-[#FF6D1F] font-bold">Git</span> e <span
+          class="text-[#FF6D1F] font-bold">GitHub</span
+        > per il versionamento del codice e la pubblicazione delle modifiche apportate
+        durante la realizzazione.
+      </li>
+    </ul>
+    <div class="flex gap-3 text-sm mt-12">
+      <a href="/public/Simone Garofalo CV.pdf" download>
+        <button
+          class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
+        >
+          <div class="flex justify-center items-center gap-2">
+            Scarica CV
+            <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="12px"
+                viewBox="0 -960 960 960"
+                width="12px"
+                fill="#ffffff"
+                ><path
+                  d="M440-800v487L216-537l-56 57 320 320 320-320-56-57-224 224v-487h-80Z"
+                ></path></svg
+              >
+            </div>
+          </div>
+        </button>
+      </a>
+    </div>
+  </div>
 </div>
