--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -52,41 +52,47 @@
     </h1>
 
     <div class="flex gap-5 text-2xl">
-      <button class="border-2 border-[#333333] py-2 px-3 rounded-3xl">
-        <div class="flex justify-center items-center gap-2">
-          Scarica CV
-          <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="16px"
-              viewBox="0 -960 960 960"
-              width="16px"
-              fill="#ffffff"
-              ><path
-                d="M440-800v487L216-537l-56 57 320 320 320-320-56-57-224 224v-487h-80Z"
-              ></path></svg
-            >
-          </div>
-        </div>
-      </button>
-      <div>
+      <a href="/public/Simone Garofalo CV.pdf" download>
         <button
-          class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl"
+          class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
         >
           <div class="flex justify-center items-center gap-2">
-            Contattami
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              height="20px"
-              viewBox="0 -960 960 960"
-              width="20px"
-              fill="#ffffff"
-              ><path
-                d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"
-              ></path></svg
-            >
+            Scarica CV
+            <div class="border-2 border-[#333333] bg-[#333333] rounded-full">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="16px"
+                viewBox="0 -960 960 960"
+                width="16px"
+                fill="#ffffff"
+                ><path
+                  d="M440-800v487L216-537l-56 57 320 320 320-320-56-57-224 224v-487h-80Z"
+                ></path></svg
+              >
+            </div>
           </div>
         </button>
+      </a>
+      <div>
+        <a href="#contatti">
+          <button
+            class="border-2 border-[#FF6D1F] bg-[#FF6D1F] text-white py-2 px-3 rounded-3xl"
+          >
+            <div class="flex justify-center items-center gap-2">
+              Contattami
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="20px"
+                viewBox="0 -960 960 960"
+                width="20px"
+                fill="#ffffff"
+                ><path
+                  d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z"
+                ></path></svg
+              >
+            </div>
+          </button>
+        </a>
       </div>
     </div>
   </div>
