Delated some duplicate files and updated contact component layout

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,5 +1,15 @@
 <div class="h-[700px] grid grid-cols-12 grid-rows-2 bg-[#FF6D1F] rounded-3xl">
-  <div class="col-start-2 col-end-6 flex justify-end items-center mt-10"></div>
+  <div class="col-start-3 col-end-7 flex justify-end items-center mt-10">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      height="250px"
+      viewBox="0 -960 960 500"
+      width="220px"
+      fill="000000"
+      ><path d="M360-200v-80h264L160-744l56-56 464 464v-264h80v400H360Z"
+      ></path></svg
+    >
+  </div>
   <div
     class="col-start-7 col-end-12 flex justify-center items-center text-end mt-10"
   >
