Updated font's color in curriculum page

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -1,23 +1,21 @@
 <div class="h-14 grid grid-cols-12 my-5">
   <div class="col-start-2 col-end-12">
-    <div class="col-start-2 col-end-4 flex justify-start">
-      <a href="/">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          height="40px"
-          viewBox="0 -960 960 960"
-          width="40px"
-          fill="000000"
-          ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"
-          ></path></svg
-        >
-      </a>
-    </div>
+    <a href="/">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        height="40px"
+        viewBox="0 -960 960 960"
+        width="40px"
+        fill="#333333"
+        ><path d="M400-80 0-480l400-400 71 71-329 329 329 329-71 71Z"
+        ></path></svg
+      >
+    </a>
   </div>
 </div>
 
 <div class="h-[200px] grid grid-cols-12 text-8xl">
-  <div class="col-start-2 col-end-12 mt-5">
+  <div class="col-start-2 col-end-12 text-[#333333] mt-5">
     <h1 class="font-bold">Curriculum</h1>
     <p class="overflow-hidden text-3xl">
       Sono un <span class="text dinamic-text-content"
@@ -29,7 +27,7 @@
 
 <div class="h-[50vsh] grid grid-cols-12">
   <div class="col-start-2 col-end-6 mt-5 mb-52">
-    <h3 class="font-bold text-5xl mb-6">Skills</h3>
+    <h3 class="font-bold text-5xl text-[#333333] mb-6">Skills</h3>
     <div class="h-32 w-[450px] flex flex-wrap gap-x-5 gap-y-8 mb-16">
       <div>
         <span class="py-2 px-4 bg-[#FF6D1F] text-white rounded-full">HTML</span>
@@ -73,7 +71,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col">
+    <div class="flex flex-col text-[#333333]">
       <h3 class="font-bold text-5xl mb-2">Formazione</h3>
       <h4>Corso Web Design & Font-end development</h4>
       <p class="text-xs mb-3 italic">
@@ -93,7 +91,7 @@
     </div>
   </div>
 
-  <div class="col-start-8 col-end-12 my-5">
+  <div class="col-start-8 col-end-12 text-[#333333] my-5">
     <h3 class="font-bold text-5xl mb-2">Ultimo progetto</h3>
     <h4 class="font-bold text-xl mb-4">Portfolio personale</h4>
     <p class="mb-8">
