Updated logo and hero section

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,8 @@
 <header>
   <nav class="grid grid-cols-12 h-14 w-full my-10 fixed z-10">
     <div class="col-start-2 col-end-12 flex items-center justify-between">
-      <div id="logo" class="text-xl md:text-2xl">
-        <a href="/">logo</a>
+      <div id="logo" class="text-xl text-center md:text-2xl">
+        <a href="/">simone garofalo</a>
       </div>
       <div
         id="menu-toggle"
