Removed some old component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Footer from "../components/Footer.astro";
 <section class="grid grid-cols-12 grid-rows-3 gap-2 ml-5 mr-5">
   <Project
     id="project-1"
-    image="beauty.jpg"
+    image="progetto-1.png"
     title="Portfolio"
     description="Astro, HTML5, CSS3, Javascript, Tailwind"
   />
