--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -13,8 +13,10 @@ const bgStyle = `background-image: url('${image}')`;
   >
   </div>
   <div class="text-center text-white absolute flex flex-col gap-5">
-    <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
-    <p class="text-2xl">{description}</p>
+    <a href="https://simone-garofalo.netlify.app/" rel="noopener noreferrer">
+      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
+      <p class="text-2xl">{description}</p>
+    </a>
   </div>
 </div>
 <!-- <div class="overflow-hidden cursor-pointer">
