Updated 'download cv' button

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -124,7 +124,7 @@
       </li>
     </ul>
     <div class="flex gap-3 text-sm mt-12">
-      <a href="/public/Simone Garofalo CV.pdf" download>
+      <a href="/Simone Garofalo CV.pdf" download>
         <button
           class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
         >
