--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -52,7 +52,7 @@
     </h1>
 
     <div class="flex gap-5 text-2xl">
-      <a href="/public/Simone Garofalo CV.pdf" download>
+      <a href="/Simone Garofalo CV.pdf" download>
         <button
           class="border-2 border-[#333333] py-2 px-3 rounded-3xl hover:bg-[#333333] hover:text-white"
         >
