--- a/src/components/Project2.astro
+++ b/src/components/Project2.astro
@@ -12,13 +12,13 @@ const bgStyle = `background-image: url('${image}')`;
     class="absolute inset-0 bg-black/50 transition duration-700 group-hover:bg-black/20 rounded-xl"
   >
   </div>
-  <div class="text-center text-white absolute flex flex-col gap-5">
+  <div class="text-center text-white absolute flex flex-col">
     <a
       href="https://studio-yoga-landingpage.netlify.app/"
       target="_blank"
       rel="noopener noreferrer"
     >
-      <h3 class="text-6xl md:text-7xl leading-relaxed">{title}</h3>
+      <h3 class="text-6xl md:text-7xl leading-relaxed mb-2">{title}</h3>
       <p class="text-2xl">{description}</p>
     </a>
   </div>
