Added tailwind section in curriculum.astro page

--- a/src/components/Cv.astro
+++ b/src/components/Cv.astro
@@ -116,6 +116,10 @@
         <span class="text-[#FF6D1F] font-bold">JavaScript</span> per animare il menù,
         creare testi reattivi e implementare uno scrolling dinamico della navbar.
       </li>
+      <li class="mb-8">
+        <span class="text-[#FF6D1F] font-bold">Tailwind</span> come framework CSS
+        per gestire l'intera personalizzazione grafica del sito.
+      </li>
       <li>
         <span class="text-[#FF6D1F] font-bold">Git</span> e <span
           class="text-[#FF6D1F] font-bold">GitHub</span
