Updated project3 component

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <section id="about" class="h-100vsh grid grid-cols-12 grid-rows-2">
-  <div class="col-start-1 col-end-12 text-5xl m-5">
+  <div class="col-span-12 text-5xl m-5">
     <p class="mb-16 fade-in">
       Ciao &#x1F44B;&#x1F3FC;<br />
       piacere Simone!
@@ -9,15 +9,15 @@
         >siti web</span
       > e <span class="text-[#FF6D1F]">landing page</span>.
     </p>
-    <p class="mb-8 fade-in">
+    <p class="mb-24 fade-in">
       Sfrutto la potenza del web per aiutare piccole aziende locali e freelance
       ad ottenere maggiore <span class="text-[#FF6D1F]">visibilità</span>.
     </p>
   </div>
   <div
-    class="col-start-2 col-end-12 row-start-2 flex flex-col items-end justify-start text-5xl text-end"
+    class="col-span-12 row-start-2 flex flex-col justify-start text-5xl text-end m-5"
   >
-    <p class="mb-24 fade-in">
+    <p class="mb-16 fade-in">
       Ciò che è nato come un hobby, mi ha portato nel 2024 a lasciare il mio
       lavoro da dipendente per dedicarmi totalmente allo <span
         class="text-[#FF6D1F]">sviluppo web</span
