--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
 import Project from "../components/Project.astro";
 import Project2 from "../components/Project2.astro";
+import Project3 from "../components/Project3.astro";
 
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
@@ -36,14 +37,14 @@ import Footer from "../components/Footer.astro";
   <Project2
     id="project-2"
     image="progetto-2.png"
-    title="Landing page"
+    title="Sito web"
     description="HTML5, CSS3, GSAP, Javascript, PHP, MySQL"
   />
-  <Project2
+  <Project3
     id="project-3"
-    image="beauty.jpg"
-    title="PROGETTO 3"
-    description="Descrizione del terzo progetto"
+    image="progetto-3.png"
+    title="Landing page"
+    description="HTML5, CSS3, GSAP, Javascript, PHP, MySQL"
   />
 </section>
 
