Updated personal data

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -5,7 +5,7 @@
       piacere Simone!
     </p>
     <p class="mb-8 fade-in">
-      Da circa due anni mi occupo di realizzare <span class="text-[#FF6D1F]"
+      Da circa un anno mi occupo di realizzare <span class="text-[#FF6D1F]"
         >siti web</span
       > e <span class="text-[#FF6D1F]">landing page</span>.
     </p>
