--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -26,13 +26,17 @@
     >
     MAIL
     <a
-      href="mailto:simonegarofalo96@gmail.com"
+      href="mailto:simonegarofalo.webdesigner@gmail.com"
       class="border-b-2 border-black text-end pb-2 hover:font-bold"
-      >simonegarofalo96@gmail.com</a
+      >simonegarofalo.webdesigner@gmail.com</a
     >
     SOCIAL
     <div class="flex flex-row justify-end gap-5">
-      <a href="https://www.linkedin.com/in/simone-garofalo/">
+      <a
+        href="https://www.linkedin.com/in/simone-garofalo/"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg
           class="hover:scale-110"
           width="30"
@@ -46,7 +50,11 @@
             fill="black"></path>
         </svg>
       </a>
-      <a href="https://github.com/simonegarofalo">
+      <a
+        href="https://github.com/simonegarofalo"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg
           class="hover:scale-110"
           width="30"
