Updated project section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import Footer from "../components/Footer.astro";
     id="project-3"
     image="progetto-3.png"
     title="Landing page"
-    description="HTML5, CSS3, GSAP, Javascript, PHP, MySQL"
+    description="HTML5, CSS3, Javascript, PHP, MySQL"
   />
 </section>
 
